<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="com.yunusov.puzzle15.HomeActivity">

    <ImageView
        android:background="@drawable/ribbon2"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_margin="15dp"/>

    <Button
        style="@style/ButtonPlay"
        android:onClick="play"
        android:text="@string/play"
        />

    <Button
        android:onClick="about"
        style="@style/aboutButton"
        android:text="@string/info" />

    <Button
        android:onClick="exit"
        style="@style/aboutButton"
        android:text="@string/exit" />
</LinearLayout>
    <TextView
        android:id="@+id/linkToAuthor"
        android:clickable="true"
        android:onClick="forwardToLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="bottom"
        android:padding="10dp"
        android:gravity="center"
        android:focusable="true" />

</FrameLayout>